--- a/2-github-portfolio-pwa/package.json
+++ b/2-github-portfolio-pwa/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
+    "register-service-worker": "^1.7.2",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "vite": "^4.4.9"
   }
 }
