--- a/3-slider-puzzle-game/package.json
+++ b/3-slider-puzzle-game/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "jest-localstorage-mock": "^2.4.26",
     "prettier": "^2.4.1"
   }
 }
