--- a/4-photo-desktop-app/package.json
+++ b/4-photo-desktop-app/package.json
@@ -13,8 +13,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^1.13.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
